// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI Snapshots FeedMatchCard renders correctly 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  className="mx-5 mb-4 overflow-hidden rounded-[24px] px-6 pt-6 pb-4"
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "backgroundColor": "transparent",
      "borderColor": "#0F6E56",
      "borderLeftColor": "#0F6E56",
      "borderLeftWidth": 3,
      "borderWidth": 1,
      "elevation": 3,
      "shadowColor": "rgba(15, 110, 86, 0.4)",
      "shadowOffset": {
        "height": 6,
        "width": 0,
      },
      "shadowOpacity": 0.08,
      "shadowRadius": 14,
    }
  }
>
  <Text
    adjustsFontSizeToFit={true}
    ellipsizeMode="tail"
    minimumFontScale={0.68}
    numberOfLines={2}
    style={
      {
        "color": "#0F6E56",
        "fontFamily": "BarlowCondensed-Bold",
        "fontSize": 36,
        "letterSpacing": 0.8,
        "lineHeight": 45,
        "textTransform": "uppercase",
      }
    }
  >
    Court A
  </Text>
  <Text
    style={
      {
        "color": "rgba(122, 136, 132, 0.44)",
        "fontFamily": "BarlowCondensed-BoldItalic",
        "fontSize": 44,
        "lineHeight": 52,
      }
    }
  >
    08:00 - 10:00
  </Text>
  <View
    className="mt-1.5"
  >
    <View
      className="self-start flex-row items-center rounded-full px-3 py-1.5"
      style={
        {
          "backgroundColor": "#f2f4f1",
          "borderColor": "#E5E3DC",
          "borderWidth": 1,
          "maxWidth": "100%",
        }
      }
    >
      <View
        color="#7A8884"
        size={13}
        strokeWidth={2.4}
      />
      <Text
        className="ml-1.5"
        ellipsizeMode="tail"
        numberOfLines={1}
        style={
          {
            "color": "#7A8884",
            "fontFamily": "PlusJakartaSans-SemiBold",
            "fontSize": 12,
            "lineHeight": 17,
          }
        }
      >
        10 Chu Van An
      </Text>
    </View>
  </View>
  <View
    className="mt-2 flex-row flex-wrap items-center gap-2"
  >
    <View
      className="flex-row items-center rounded-full px-3 py-2"
      style={
        {
          "backgroundColor": "#f2f4f1",
          "borderColor": "#E5E3DC",
          "borderWidth": 1,
        }
      }
    >
      <View
        color="#7A8884"
        size={14}
        strokeWidth={2.4}
      />
      <Text
        className="ml-1.5"
        style={
          {
            "color": "#7A8884",
            "fontFamily": "PlusJakartaSans-SemiBold",
            "fontSize": 12,
            "lineHeight": 18,
          }
        }
      >
        Đã đặt sân
      </Text>
    </View>
    <View
      className="flex-row items-center rounded-full px-3 py-2"
      style={
        {
          "backgroundColor": "#f2f4f1",
          "borderColor": "#E5E3DC",
          "borderWidth": 1,
        }
      }
    >
      <View
        color="#7A8884"
        size={14}
        strokeWidth={2.4}
      />
      <Text
        className="ml-1.5"
        style={
          {
            "color": "#7A8884",
            "fontFamily": "PlusJakartaSans-SemiBold",
            "fontSize": 12,
            "lineHeight": 18,
          }
        }
      >
        Sat, 24/05
      </Text>
    </View>
    <View
      className="flex-row items-center rounded-full px-3 py-2"
      style={
        {
          "backgroundColor": "#f2f4f1",
          "borderColor": "#E5E3DC",
          "borderWidth": 1,
        }
      }
    >
      <View />
      <Text
        className="ml-1.5"
        style={
          {
            "color": "#7A8884",
            "fontFamily": "PlusJakartaSans-SemiBold",
            "fontSize": 12,
            "lineHeight": 18,
          }
        }
      >
        Intermediate
      </Text>
    </View>
    <View
      className="flex-row items-center rounded-full px-3 py-2"
      style={
        {
          "backgroundColor": "#f2f4f1",
          "borderColor": "#E5E3DC",
          "borderWidth": 1,
        }
      }
    >
      <View
        color="#7A8884"
        size={14}
        strokeWidth={2.4}
      />
      <Text
        className="ml-1.5"
        style={
          {
            "color": "#7A8884",
            "fontFamily": "PlusJakartaSans-SemiBold",
            "fontSize": 12,
            "lineHeight": 18,
          }
        }
      >
        1200
         ELO
      </Text>
    </View>
    <View
      className="flex-row items-center rounded-full px-3 py-2"
      style={
        {
          "backgroundColor": "#f2f4f1",
          "borderColor": "#E5E3DC",
          "borderWidth": 1,
        }
      }
    >
      <View
        color="#7A8884"
        size={14}
        strokeWidth={2.4}
      />
      <Text
        className="ml-1.5"
        style={
          {
            "color": "#7A8884",
            "fontFamily": "PlusJakartaSans-SemiBold",
            "fontSize": 12,
            "lineHeight": 18,
          }
        }
      >
        3.5
         DUPR
      </Text>
    </View>
    <View
      className="flex-row items-center rounded-full px-3 py-2"
      style={
        {
          "backgroundColor": "#f2f4f1",
          "borderColor": "#E5E3DC",
          "borderWidth": 1,
        }
      }
    >
      <View
        color="#7A8884"
        size={14}
        strokeWidth={2.4}
      />
      <Text
        className="ml-1.5"
        style={
          {
            "color": "#7A8884",
            "fontFamily": "PlusJakartaSans-SemiBold",
            "fontSize": 12,
            "lineHeight": 18,
          }
        }
      >
        50K
        /ng
      </Text>
    </View>
  </View>
  <View
    className="mt-4 rounded-[24px] p-3.5"
    style={
      {
        "backgroundColor": "#f2f4f1",
      }
    }
  >
    <View
      className="flex-row items-center justify-between"
    >
      <View
        className="mr-3 flex-1 flex-row items-center"
      >
        <View
          className="mr-3 h-11 w-11 items-center justify-center rounded-full"
          style={
            {
              "backgroundColor": "#0F6E56",
              "borderColor": "rgba(15, 110, 86, 0.14)",
              "borderWidth": 1,
            }
          }
        >
          <Text
            style={
              {
                "color": "#ffffff",
                "fontFamily": "BarlowCondensed-Bold",
                "fontSize": 15,
              }
            }
          >
            H
          </Text>
        </View>
        <View
          className="flex-1"
        >
          <Text
            numberOfLines={1}
            style={
              {
                "color": "#1A2E2A",
                "fontFamily": "PlusJakartaSans-SemiBold",
                "fontSize": 13,
              }
            }
          >
            Host User
          </Text>
        </View>
      </View>
      <View
        className="items-end"
      >
        <Text
          style={
            {
              "color": "#1A2E2A",
              "fontFamily": "BarlowCondensed-Bold",
              "fontSize": 16,
            }
          }
        >
          3/4
        </Text>
        <Text
          style={
            {
              "color": "#7A8884",
              "fontFamily": "PlusJakartaSans-Regular",
              "fontSize": 10,
            }
          }
        >
          người chơi
        </Text>
      </View>
    </View>
    <View
      className="mt-3 h-2 rounded-full overflow-hidden"
      style={
        {
          "backgroundColor": "#e1e3e0",
        }
      }
    >
      <View />
    </View>
    <View
      className="mt-3 flex-row items-center justify-between gap-3"
    >
      <View
        className="flex-1 flex-row items-center"
      >
        <View
          className="flex-row items-center rounded-full px-3 py-2"
          style={
            {
              "backgroundColor": "#e1e3e0",
              "borderColor": "#E5E3DC",
              "borderWidth": 1,
            }
          }
        >
          <View
            color="#7A8884"
            size={13}
            strokeWidth={2.3}
          />
          <Text
            className="ml-1.5"
            style={
              {
                "color": "#7A8884",
                "fontFamily": "PlusJakartaSans-SemiBold",
                "fontSize": 12,
              }
            }
          >
            Còn 1 chỗ
          </Text>
        </View>
      </View>
      <View
        className="rounded-full px-4 py-2"
        style={
          {
            "backgroundColor": "#0F6E56",
          }
        }
      >
        <Text
          style={
            {
              "color": "#ffffff",
              "fontFamily": "BarlowCondensed-Bold",
              "fontSize": 14,
              "letterSpacing": 1.3,
              "textTransform": "uppercase",
            }
          }
        >
          Vào kèo
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`UI Snapshots SessionMetaCard renders correctly 1`] = `
<View
  style={
    {
      "backgroundColor": "#ffffff",
      "borderColor": "#E5E3DC",
      "borderRadius": 16,
      "borderWidth": 0.5,
      "elevation": 0,
      "overflow": "hidden",
      "shadowOffset": {
        "height": 0,
        "width": 0,
      },
      "shadowOpacity": 0,
      "shadowRadius": 0,
    }
  }
>
  <View
    style={
      {
        "position": "relative",
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#0F6E56",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingHorizontal": 16,
          "paddingVertical": 6,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "columnGap": 6,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#ffffff",
              "borderRadius": 999,
              "height": 5,
              "width": 5,
            }
          }
        />
        <Text
          style={
            {
              "color": "#ffffff",
              "fontFamily": "BarlowCondensed-Bold",
              "fontSize": 11,
              "letterSpacing": 0.5,
            }
          }
        >
          THÔNG TIN KÈO
        </Text>
      </View>
      <Text
        style={
          {
            "color": "rgba(255, 255, 255, 0.8)",
            "fontFamily": "PlusJakartaSans-SemiBold",
            "fontSize": 11,
          }
        }
      >
        Đánh đôi
      </Text>
    </View>
    <View
      style={
        {
          "paddingBottom": 12,
          "paddingHorizontal": 16,
          "paddingTop": 12,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "flex-start",
            "flexDirection": "row",
            "gap": 12,
            "justifyContent": "space-between",
            "opacity": 1,
          }
        }
      >
        <Text
          numberOfLines={2}
          style={
            {
              "color": "#1A2E2A",
              "flex": 1,
              "fontFamily": "BarlowCondensed-Bold",
              "fontSize": 31,
              "letterSpacing": 0,
              "lineHeight": 36,
              "marginBottom": 4,
              "textTransform": "uppercase",
            }
          }
        >
          Court A
        </Text>
        <View
          style={
            {
              "marginTop": 6,
            }
          }
        >
          <View
            color="#0F6E56"
            size={24}
            strokeWidth={2.5}
          />
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "columnGap": 6,
            "flexDirection": "row",
          }
        }
      >
        <View
          color="#7A8884"
          size={13}
          strokeWidth={2.5}
        />
        <Text
          ellipsizeMode="tail"
          numberOfLines={1}
          style={
            {
              "color": "#7A8884",
              "flexShrink": 1,
              "fontFamily": "PlusJakartaSans-Regular",
              "fontSize": 13,
              "lineHeight": 18,
            }
          }
        >
          10 Chu Van An, Da Nang
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      {
        "backgroundColor": "#F5F1E8",
        "paddingBottom": 16,
        "paddingHorizontal": 16,
        "paddingTop": 14,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "flex-start",
          "flexDirection": "row",
          "justifyContent": "space-between",
          "marginBottom": 8,
        }
      }
    >
      <View>
        <Text
          style={
            {
              "color": "#7A8884",
              "fontFamily": "PlusJakartaSans-SemiBold",
              "fontSize": 10,
              "letterSpacing": 0.8,
              "marginBottom": 4,
              "textTransform": "uppercase",
            }
          }
        >
          THỜI GIAN
        </Text>
        <Text
          style={
            {
              "color": "#1A2E2A",
              "fontFamily": "BarlowCondensed-Bold",
              "fontSize": 33,
              "letterSpacing": 0,
              "lineHeight": 33,
            }
          }
        >
          08:00
        </Text>
        <Text
          style={
            {
              "color": "#7A8884",
              "fontFamily": "PlusJakartaSans-Regular",
              "fontSize": 13,
              "marginTop": 4,
            }
          }
        >
          Sat, 24/05
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "flex-end",
          }
        }
      >
        <Text
          style={
            {
              "color": "#7A8884",
              "fontFamily": "PlusJakartaSans-SemiBold",
              "fontSize": 10,
              "letterSpacing": 0.8,
              "marginBottom": 4,
              "textTransform": "uppercase",
            }
          }
        >
          CHI PHÍ
        </Text>
        <Text
          style={
            {
              "color": "#1A2E2A",
              "fontFamily": "BarlowCondensed-Bold",
              "fontSize": 33,
              "lineHeight": 33,
            }
          }
        >
          50K
        </Text>
        <Text
          style={
            {
              "color": "#7A8884",
              "fontFamily": "PlusJakartaSans-Regular",
              "fontSize": 11,
              "marginTop": 4,
            }
          }
        >
          /người
        </Text>
      </View>
    </View>
    <View
      style={
        {
          "backgroundColor": "#E5E3DC",
          "height": 1,
          "marginVertical": 8,
          "opacity": 0.5,
        }
      }
    />
    <View
      style={
        {
          "gap": 12,
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#FFFFFF",
              "borderColor": "#E5E3DC",
              "borderRadius": 4,
              "borderWidth": 1,
              "paddingHorizontal": 14,
              "paddingVertical": 4,
            }
          }
        >
          <Text
            style={
              {
                "color": "#1A2E2A",
                "fontFamily": "PlusJakartaSans-SemiBold",
                "fontSize": 12,
              }
            }
          >
            Intermediate
          </Text>
        </View>
        <View
          style={
            {
              "alignItems": "center",
              "flexDirection": "row",
              "marginLeft": 12,
            }
          }
        >
          <View
            style={
              {
                "backgroundColor": "#0F6E56",
                "borderRadius": 999,
                "height": 6,
                "width": 6,
              }
            }
          />
          <Text
            style={
              {
                "color": "#0F6E56",
                "fontFamily": "BarlowCondensed-Bold",
                "fontSize": 10,
                "letterSpacing": 0.5,
                "marginLeft": 6,
                "textTransform": "uppercase",
              }
            }
          >
            Đã đặt sân
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "alignItems": "flex-start",
            "flexDirection": "row",
          }
        }
      >
        <View
          color="#1A2E2A"
          size={14}
          strokeWidth={2.5}
          style={
            {
              "marginTop": 2,
            }
          }
        />
        <View
          style={
            {
              "flex": 1,
              "marginLeft": 8,
            }
          }
        >
          <Text
            style={
              {
                "color": "#7A8884",
                "fontFamily": "PlusJakartaSans-SemiBold",
                "fontSize": 10,
                "letterSpacing": 0.8,
                "textTransform": "uppercase",
              }
            }
          >
            LỜI NHẮN
          </Text>
          <Text
            style={
              {
                "color": "#1A2E2A",
                "fontFamily": "PlusJakartaSans-Regular",
                "fontSize": 13,
                "marginTop": 2,
              }
            }
          >
            Fair play only.
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
